Ejercicio Random Card Generator Finalizado

--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 
 <body>
     <div class="carta">
-<!--         <a class="superior">♥</a>
-        <a class="numero">7</a>
-        <a class="inferior">♥</a> -->
+<!-- 
+        <a class="superior">♥</a>
+        <a class="numero" style="color: blue;">7</a>
+        <a class="inferior">♥</a>
+ -->
     </div>
-
-    <script src="/main.js">
-
-    </script>
+    <script src="/main.js"></script>
 </body>
 </html>
